<resources>
    <string name="app_name">What\'s Nearby</string>
    <string name="app_desc">Know your neighborhood</string>
    <string name="gps_disabled_alert_title">GPS is disabled</string>
    <string name="gps_disabled_alert_msg">Location information can not be retrieved.
        Turn on GPS from settings.</string>
    <string name="gps_settings">Settings</string>
    <string name="gps_cancel">Cancel</string>
    <string name="make_call_msg">%s</string>
    <string name="time_estimation">You\&apos;re \"%s\" minutes away from your location.</string>
    <string name="permission_available_location">All required permissions has been granted.</string>
    <string name="permissions_not_granted">Permissions were not granted.</string>
    <string name="permission_location_rationale">Permissions are required to access device location.</string>
    <string name="use_gps">Use GPS for location</string>
    <string name="use_wifi">Turn on Wi-Fi</string>
    <string name="improve_location_msg">This app wants to change your device settings:</string>
    <string name="poor_net">No or poor internet connection</string>
    <string name="server_error">Oops!! Something went wrong on server side.</string>
    <string name="try_again">Try again</string>
    <string name="gps_broadcast_notification_msg">You\'ve just turned GPS off.
        You wouldn\'t be able to search and manage your nearby places!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="application_exit_msg">Press back again to exit %s</string>
    <string name="google_map_static_api_url">https://maps.googleapis.com/maps/api/staticmap?center=</string>

    <!-- [Developer Privacy Policy URL] -->
    <string name="dev_privacy_policy_url">https://docs.google.com/document/d/1RYqPBi2Y_XRS7E7xPbtfmACeyPRkCcYLt6RbG9rRGO8/edit?usp=sharing</string>

    <!-- Guillotine Strings -->
    <string name="explore">Explore</string>
    <string name="share">Share</string>
    <string name="about">About</string>

    <!-- [App rate texts] -->
    <string name="app_rate_text">If you enjoyed using \"%s\", please take a moment to rate it. Thanks for your support!</string>
    <string name="app_rate_no_text">No thanks!</string>
    <string name="app_rate_remind_later_text">Remind me later</string>
    <string name="app_rate_rate_now_text">Rate now</string>

    <!-- SWEET ALERT DIALOG Strings -->
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="LOADING">Loading&#8230;</string>
    <string name="title_activity_about">ActivityAbout</string>

    <string name="action_settings">Settings</string>
    <string name="action_privacy_policy">Privacy policy</string>
    <string name="app_developer">App Developer</string>

    <!--BOTTOM SHEET STRINGS-->
    <string name="key_binding_default_toolbar_name">Modal-Toolbar-Title</string>
    <string name="BackDropBottomSheetBehavior">com.nearby.whatsnearby.bottomsheet.BackdropBottomSheetBehavior</string>
    <string name="BottomSheetBehaviorGoogleMapsLike">com.nearby.whatsnearby.bottomsheet.BottomSheetBehaviorGoogleMapsLike</string>
    <string name="ScrollAwareFABBehavior">com.nearby.whatsnearby.bottomsheet.ScrollAwareFABBehavior</string>
    <string name="MergedAppBarLayoutBehavior">com.nearby.whatsnearby.bottomsheet.MergedAppBarLayoutBehavior</string>
    <string name="ScrollingAppBarLayoutBehavior">com.nearby.whatsnearby.bottomsheet.ScrollingAppBarLayoutBehavior</string>

    <!-- [Permission Description String] -->
    <string name="perm_location">Uses the device\'s location </string>
    <string name="perm_phone">Uses one or more of : phone, call log. Charges may apply</string>
    <string name="perm_storage">Uses one or more of : files on the device, such as images, videos,
        or audio; the device\'s external storage</string>
    <string name="perm_wifi_connection">Allows the app to view information about Wi-Fi networking,
        such as whether Wi-Fi is enabled &amp; names of connected Wi-Fi devices</string>

    <!-- [Material Transitions & Shared Element strings] -->
    <string name="transition_grid_item">transition_from_grid_to_details</string>
    <string name="transition_explore">transition_explore</string>
    <string name="transition_profile">transition_profile</string>
    <string name="transition_maps_detail">transition_from_map_to_details</string>

    <!-- [Oreo Notification texts] -->
    <string name="bg_serv_noti_launch_app">Launch</string>
    <string name="bg_serv_noti_rem_loc_updates">Close</string>
    <string name="bg_serv_noti_content_text">%1$s is running in background</string>
    <string name="title_activity_bottom_nav_controller">What\'s Nearby</string>
    <string name="title_home">Home</string>
    <string name="number_of_reviews">&#40; %d &#41;</string>
    <string name="number_of_no_reviews">&#40; %d &#41;</string>
    
    <!-- Place details data binding -->
</resources>
