<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.nearby.whatsnearby.fragments.home.FragmentHome"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.nearby.whatsnearby.fragments.explore.FragmentExplore"
        android:label="@string/explore"
        tools:layout="@layout/places_grid" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.nearby.whatsnearby.fragments.about.FragmentAbout"
        android:label="@string/about"
        tools:layout="@layout/fragment_home" />

</navigation>