<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/coordinatorlayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <FrameLayout
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:background="@android:color/darker_gray"
        android:fitsSystemWindows="true"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="@android:color/transparent"
        app:behavior_scrolling_appbar_peek_height="@dimen/bottom_sheet_peek_height"
        app:layout_behavior="@string/ScrollingAppBarLayoutBehavior">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="@dimen/anchor_point"
        app:behavior_backdrop_peekHeight="@dimen/bottom_sheet_peek_height"
        android:background="@android:color/transparent"
        app:layout_behavior="@string/BackDropBottomSheetBehavior"
        android:fitsSystemWindows="true">
    </androidx.viewpager.widget.ViewPager>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:behavior_peekHeight="@dimen/bottom_sheet_peek_height"
        android:id="@+id/bottom_sheet"
        app:layout_behavior="@string/BottomSheetBehaviorGoogleMapsLike"
        app:anchorPoint="@dimen/anchor_point"
        android:fitsSystemWindows="true">

        <include
            layout="@layout/bottom_sheet_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"/>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_anchor="@id/bottom_sheet"
        app:layout_anchorGravity="top|right|end"
        android:src="@drawable/ic_navigation_white_24dp"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@color/selected_item_color"
        app:layout_behavior="@string/ScrollAwareFABBehavior"
        android:clickable="true"
        android:id="@+id/fabNavigate"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/merged_appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:tag="modal-appbar"
        app:layout_behavior="@string/MergedAppBarLayoutBehavior"
        app:behavior_merged_appbar_anchor_point="@dimen/anchor_point">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <View
                android:id="@+id/background"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:layout_gravity="bottom"/>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/expanded_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/key_binding_default_toolbar_name"
                app:navigationIcon="@mipmap/ic_close_white_24dp"/>
        </FrameLayout>
    </com.google.android.material.appbar.AppBarLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>