<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/guillotine_background"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        style="@style/Toolbar"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/guillotine_hamburger"
            style="@style/ImageView.Hamburger"
            android:src="@mipmap/ic_menu" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/explore_group"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@mipmap/guillotine_circle_compass" />

        <TextView
            style="@style/TextView.GuillotineItem.Selected"
            android:text="@string/explore" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/share_group"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@mipmap/guillotine_share" />

        <TextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/share" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_group"
        style="@style/LinearLayout.GuillotineItem"
        android:layout_marginTop="@dimen/guillotine_medium_margin">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@mipmap/guillotine_about_me" />

        <TextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/about" />
    </LinearLayout>

</LinearLayout>