<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/guillotine_background_dark"
    android:orientation="vertical">
    <View
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/guillotine_actionbar_background_view_height"
        android:background="@color/guillotine_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            app:contentInsetStart="0dp"
            style="@style/Toolbar">

            <ImageView
                android:id="@+id/content_hamburger"
                style="@style/ImageView.Hamburger"
                android:src="@mipmap/ic_menu_90"
                android:contentDescription="@string/about"/>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/explore"
                android:textSize="@dimen/guillotine_item_text_size" />
        </android.support.v7.widget.Toolbar>


        <pl.bclogic.pulsator4droid.library.PulsatorLayout
            android:id="@+id/pulsator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:pulse_count="4"
            app:pulse_duration="7000"
            app:pulse_repeat="0"
            app:pulse_color="@color/warning_stroke_color"
            app:pulse_startFromScratch="false"
            android:layout_gravity="center"
            android:gravity="center">
            
            <ImageView
                android:id="@+id/imgWorld"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/world"
                android:contentDescription="@string/app_name"/>
            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_below="@+id/imgWorld"
                android:layout_centerInParent="true"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tvAppDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_desc"
                android:layout_below="@+id/tvAppName"
                android:layout_centerInParent="true"
                android:gravity="center"/>

        </pl.bclogic.pulsator4droid.library.PulsatorLayout>
        <com.google.android.gms.ads.AdView
            android:id="@+id/ad_view"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorPrimary"
            android:layout_gravity="bottom"
            app:adSize="BANNER"
            app:adUnitId="@string/wn_banner_id" />
    </LinearLayout>
</FrameLayout>